// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sets submit button label "Save" when saving is false 1`] = `
<form
  onSubmit={[MockFunction]}
>
  <h2>
    Edit
     Chronicle
  </h2>
  <div
    className="form-group"
  >
    <label
      htmlFor="name"
    >
      Name
    </label>
    <div
      className="field"
    >
      <input
        className="form-control"
        name="name"
        onChange={[MockFunction]}
        type="text"
        value="ChronicleName1"
      />
    </div>
  </div>
  <div
    className="form-group"
  >
    <label
      htmlFor="currentLeader"
    >
      Current Leader
    </label>
    <div
      className="field"
    >
      <select
        className="form-control"
        name="currentLeader"
        onChange={[MockFunction]}
        value={1}
      >
        <option
          value=""
        >
          Select Current Leader
        </option>
        <option
          value={1}
        >
          McHolty
        </option>
        <option
          value={2}
        >
          kiki
        </option>
        <option
          value={3}
        >
          SnyderDawg
        </option>
      </select>
    </div>
  </div>
  <div
    className="form-group"
  >
    <label
      htmlFor="startDate"
    >
      Start Date
    </label>
    <div
      className="field"
    >
      <input
        className="form-control"
        name="startDate"
        onChange={[MockFunction]}
        type="text"
        value="01/01/2000"
      />
    </div>
  </div>
  <button
    className="btn btn-primary"
    disabled={false}
    type="submit"
  >
    Save
  </button>
</form>
`;

exports[`sets submit button label "Saving..." when saving is true 1`] = `
<form
  onSubmit={[MockFunction]}
>
  <h2>
    Edit
     Chronicle
  </h2>
  <div
    className="form-group"
  >
    <label
      htmlFor="name"
    >
      Name
    </label>
    <div
      className="field"
    >
      <input
        className="form-control"
        name="name"
        onChange={[MockFunction]}
        type="text"
        value="ChronicleName1"
      />
    </div>
  </div>
  <div
    className="form-group"
  >
    <label
      htmlFor="currentLeader"
    >
      Current Leader
    </label>
    <div
      className="field"
    >
      <select
        className="form-control"
        name="currentLeader"
        onChange={[MockFunction]}
        value={1}
      >
        <option
          value=""
        >
          Select Current Leader
        </option>
        <option
          value={1}
        >
          McHolty
        </option>
        <option
          value={2}
        >
          kiki
        </option>
        <option
          value={3}
        >
          SnyderDawg
        </option>
      </select>
    </div>
  </div>
  <div
    className="form-group"
  >
    <label
      htmlFor="startDate"
    >
      Start Date
    </label>
    <div
      className="field"
    >
      <input
        className="form-control"
        name="startDate"
        onChange={[MockFunction]}
        type="text"
        value="01/01/2000"
      />
    </div>
  </div>
  <button
    className="btn btn-primary"
    disabled={true}
    type="submit"
  >
    Saving...
  </button>
</form>
`;
